unpackaged/main/default/objects/Asunto__c/Asunto__c.object-meta.xml
<CustomObject>
    <description>Listado de Asuntos</description>
    <label>Asunto</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Nombre de Asunto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asuntos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>