unpackaged/main/default/objects/Asunto__c/fields/ABOGADO_EXHORTO__c.field-meta.xml
<CustomField>
    <fullName>ABOGADO_EXHORTO__c</fullName>
    <label>ABOGADO EXHORTO</label>
    <length>80</length>
    <type>Text</type>
</CustomField>