unpackaged/main/default/objects/Asunto__c/fields/Abogado_Externo__c.field-meta.xml
<CustomField>
    <fullName>Abogado_Externo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Abogado Externo</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Asuntos (Abogado Externo)</relationshipLabel>
    <relationshipName>Asuntos1</relationshipName>
    <type>Lookup</type>
</CustomField>