unpackaged/main/default/objects/Asunto__c/fields/Abogado_Externo_Suplente__c.field-meta.xml
<CustomField>
    <fullName>Abogado_Externo_Suplente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ABOGADO CORRESPONAL</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Asuntos (Abogado Externo Suplente)</relationshipLabel>
    <relationshipName>Asuntos2</relationshipName>
    <type>Lookup</type>
</CustomField>