unpackaged/main/default/objects/Asunto__c/fields/Abogado_Interno__c.field-meta.xml
<CustomField>
    <fullName>Abogado_Interno__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Abogado Interno</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Asuntos</relationshipLabel>
    <relationshipName>Asuntos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>