unpackaged/main/default/objects/Asunto__c/fields/ACCIONES_A_REALIZAR_Y_OBSERVACIONES__c.field-meta.xml
<CustomField>
    <fullName>ACCIONES_A_REALIZAR_Y_OBSERVACIONES__c</fullName>
    <label>ACCIONES A REALIZAR Y OBSERVACIONES</label>
    <length>32716</length>
    <type>LongTextArea</type>
</CustomField>