unpackaged/main/default/objects/Asunto__c/fields/Acreditado__c.field-meta.xml
<CustomField>
    <fullName>Acreditado__c</fullName>
    <label>NOMBRE DEL DEMANDADO</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>