unpackaged/main/default/objects/Asunto__c/fields/AGENCIA__c.field-meta.xml
<CustomField>
    <fullName>AGENCIA__c</fullName>
    <label>AGENCIA</label>
    <length>80</length>
    <type>Text</type>
</CustomField>