unpackaged/main/default/objects/Asunto__c/fields/Asunto_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Asunto_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Asunto External Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>