unpackaged/main/default/objects/Asunto__c/fields/Autoridad_Judicial_apelacion__c.field-meta.xml
<CustomField>
    <fullName>Autoridad_Judicial_apelacion__c</fullName>
    <label>Autoridad Judicial (apelación)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>