unpackaged/main/default/objects/Asunto__c/fields/Bienes_Susceptibles_De_Embargo__c.field-meta.xml
<CustomField>
    <fullName>Bienes_Susceptibles_De_Embargo__c</fullName>
    <label>Bienes Susceptibles De Embargo</label>
    <length>31276</length>
    <type>LongTextArea</type>
</CustomField>