unpackaged/main/default/objects/Asunto__c/fields/BUSQUEDA_POR_INDICE__c.field-meta.xml
<CustomField>
    <fullName>BUSQUEDA_POR_INDICE__c</fullName>
    <label>BUSQUEDA POR INDICE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>