unpackaged/main/default/objects/Asunto__c/fields/Castigada_o_Vencida__c.field-meta.xml
<CustomField>
    <fullName>Castigada_o_Vencida__c</fullName>
    <label>Castigada o Vencida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Castigada</fullName>
            </value>
            <value>
                <fullName>Vencida</fullName>
                <default>true</default>
                <label>Vencida</label>
            </value>
            <value>
                <fullName>Morosa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>