unpackaged/main/default/objects/Asunto__c/fields/Ciudad_en_donde_se_encuentra_el_Juzgado__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_en_donde_se_encuentra_el_Juzgado__c</fullName>
    <label>JURISDICCION</label>
    <length>100</length>
    <type>Text</type>
</CustomField>