unpackaged/main/default/objects/Asunto__c/fields/CIUDAD_Y_ESTADO__c.field-meta.xml
<CustomField>
    <fullName>CIUDAD_Y_ESTADO__c</fullName>
    <label>CIUDAD Y ESTADO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>