unpackaged/main/default/objects/Asunto__c/fields/Clasificaci_n_de_Razones__c.field-meta.xml
<CustomField>
    <fullName>Clasificaci_n_de_Razones__c</fullName>
    <label>Clasificación de Razones</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Razones_del_Dictamen__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Reporto inmuebles que se encontraban gravados desde la solicitud del crédito</fullName>
            </value>
            <value>
                <fullName>Reporto inmuebles que no eran de su propiedad</fullName>
            </value>
            <value>
                <fullName>Sin manifestación de propiedades, sin inmuebles localizados en el registro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>