unpackaged/main/default/objects/Asunto__c/fields/CLAVE_PROCESAL__c.field-meta.xml
<CustomField>
    <fullName>CLAVE_PROCESAL__c</fullName>
    <label>CLAVE  PROCESAL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>