unpackaged/main/default/objects/Asunto__c/fields/Codigo_de_Resultado_RO__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Resultado_RO__c</fullName>
    <label>Codigo de Resultado Actual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>