unpackaged/main/default/objects/Asunto__c/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <label>Comentarios</label>
    <length>32716</length>
    <type>LongTextArea</type>
</CustomField>