unpackaged/main/default/objects/Asunto__c/fields/D_as_transcurridos_para_demanda__c.field-meta.xml
<CustomField>
    <fullName>D_as_transcurridos_para_demanda__c</fullName>
    <formula>Fecha_de_Demanda__c  -  Fecha_de_Asignacion_AE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días transcurridos para demanda</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>