unpackaged/main/default/objects/Asunto__c/fields/D_as_transcurridos_para_sentencia_1a_I_F__c.field-meta.xml
<CustomField>
    <fullName>D_as_transcurridos_para_sentencia_1a_I_F__c</fullName>
    <formula>Fecha_de_Sentencia_1ra_Favorable__c -  Fecha_de_Asignacion_AE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días transcurridos para sentencia 1a I.F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>