unpackaged/main/default/objects/Asunto__c/fields/Despacho__c.field-meta.xml
<CustomField>
    <fullName>Despacho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Despacho</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Despacho</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asuntos</relationshipLabel>
    <relationshipName>Asuntos</relationshipName>
    <type>Lookup</type>
</CustomField>