unpackaged/main/default/objects/Asunto__c/fields/Deudores_Importe_Only__c.field-meta.xml
<CustomField>
    <fullName>Deudores_Importe_Only__c</fullName>
    <label>Deudores Importe Only</label>
    <length>255</length>
    <type>Text</type>
</CustomField>