unpackaged/main/default/objects/Asunto__c/fields/Dias_desde_Asignacion_a_Etapa_Actua__c.field-meta.xml
<CustomField>
    <fullName>Dias_desde_Asignacion_a_Etapa_Actua__c</fullName>
    <formula>Fecha_del_Ultima_Etapa__c - Fecha_de_Asignacion_AE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias desde Asignacion a Etapa Actua</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>