unpackaged/main/default/objects/Asunto__c/fields/Dias_transcurridos_para_Prevencion__c.field-meta.xml
<CustomField>
    <fullName>Dias_transcurridos_para_Prevencion__c</fullName>
    <formula>Fecha_de_Ejecuci_n_de_Convenio__c  - Fecha_Reasignacion_para_Ejecucion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias transcurridos para Prevención</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>