unpackaged/main/default/objects/Asunto__c/fields/Dias_transcurridos_recuperacion__c.field-meta.xml
<CustomField>
    <fullName>Dias_transcurridos_recuperacion__c</fullName>
    <formula>Fecha_de_Recuperacion__c -  Fecha_de_Asignacion_AE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días transcurridos recuperación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>