unpackaged/main/default/objects/Asunto__c/fields/Dictamen_del_Expediente__c.field-meta.xml
<CustomField>
    <fullName>Dictamen_del_Expediente__c</fullName>
    <label>Dictamen inicial del Expediente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carente de Información</fullName>
            </value>
            <value>
                <fullName>Irrecuperable</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Recuperable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>