unpackaged/main/default/objects/Asunto__c/fields/Direcci_n_o_Filial__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n_o_Filial__c</fullName>
    <label>Dirección o Filial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Almacenadora</fullName>
            </value>
            <value>
                <fullName>Arrendadora</fullName>
            </value>
            <value>
                <fullName>Auto Plazo</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Factoraje</fullName>
            </value>
            <value>
                <fullName>Hipotecario</fullName>
            </value>
            <value>
                <fullName>Hombre Camion</fullName>
            </value>
            <value>
                <fullName>Nomina</fullName>
            </value>
            <value>
                <fullName>Seguros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>