unpackaged/main/default/objects/Asunto__c/fields/DOMICILIO_DEL_DEUDOR__c.field-meta.xml
<CustomField>
    <fullName>DOMICILIO_DEL_DEUDOR__c</fullName>
    <label>DOMICILIO  DEL DEUDOR</label>
    <length>150</length>
    <type>Text</type>
</CustomField>