unpackaged/main/default/objects/Asunto__c/fields/Esquema__c.field-meta.xml
<CustomField>
    <fullName>Esquema__c</fullName>
    <label>Esquema</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Campañas</fullName>
            </value>
            <value>
                <fullName>Don Banco</fullName>
            </value>
            <value>
                <fullName>Emergente</fullName>
            </value>
            <value>
                <fullName>Empresarial</fullName>
            </value>
            <value>
                <fullName>Ordinario</fullName>
            </value>
            <value>
                <fullName>Rees/Campaña</fullName>
            </value>
            <value>
                <fullName>Rees/Ordinario</fullName>
            </value>
            <value>
                <fullName>Rees/Saldos Promedio</fullName>
            </value>
            <value>
                <fullName>Rees/TDC</fullName>
            </value>
            <value>
                <fullName>Rees/TPV</fullName>
            </value>
            <value>
                <fullName>Saldos Promedio</fullName>
            </value>
            <value>
                <fullName>TDC Socio PYME</fullName>
            </value>
            <value>
                <fullName>TPV</fullName>
            </value>
            <value>
                <fullName>Rees/Emergente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>