unpackaged/main/default/objects/Asunto__c/fields/Esquema_Salida_o_Recuperaci_n__c.field-meta.xml
<CustomField>
    <fullName>Esquema_Salida_o_Recuperaci_n__c</fullName>
    <label>Esquema Salida o Recuperación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adjudicación</fullName>
            </value>
            <value>
                <fullName>Adjudicación Parcial</fullName>
            </value>
            <value>
                <fullName>Castigo</fullName>
            </value>
            <value>
                <fullName>Cesión de Derechos</fullName>
            </value>
            <value>
                <fullName>Concurso Mercantil</fullName>
            </value>
            <value>
                <fullName>Dación en Pago</fullName>
            </value>
            <value>
                <fullName>Ejecución de Convenio</fullName>
            </value>
            <value>
                <fullName>Finiquito</fullName>
            </value>
            <value>
                <fullName>Finiquito Administrativo</fullName>
            </value>
            <value>
                <fullName>Litigio</fullName>
            </value>
            <value>
                <fullName>Reestructura</fullName>
            </value>
            <value>
                <fullName>Regularización de Reestructura</fullName>
            </value>
            <value>
                <fullName>Remate</fullName>
            </value>
            <value>
                <fullName>Adjudicación a Postor</fullName>
            </value>
            <value>
                <fullName>Finiquito a Plazos</fullName>
            </value>
            <value>
                <fullName>Pago Parcial</fullName>
            </value>
            <value>
                <fullName>Toma de Posesión</fullName>
            </value>
            <value>
                <fullName>Regularización</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>