unpackaged/main/default/objects/Asunto__c/fields/Etapa_Administrativa__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Administrativa__c</fullName>
    <label>Etapa Administrativa Entrada</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clasificación en Pendientes</fullName>
            </value>
            <value>
                <fullName>Recepción de Documentos</fullName>
            </value>
            <value>
                <fullName>Revisión de Documentos</fullName>
            </value>
            <value>
                <fullName>Solicitud de Certificación Contable</fullName>
            </value>
            <value>
                <fullName>Solicitud de Documentos Varios</fullName>
            </value>
            <value>
                <fullName>Revisión de Garantías y Bienes Susceptibles de Embargo</fullName>
            </value>
            <value>
                <fullName>Clasificación en Recuperables</fullName>
            </value>
            <value>
                <fullName>Clasificación en Irrecuperables</fullName>
            </value>
            <value>
                <fullName>Acuse Abogado Externo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>