unpackaged/main/default/objects/Asunto__c/fields/Etapa_Administrativa_Salida__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Administrativa_Salida__c</fullName>
    <label>Etapa Administrativa Salida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recepción de Bienes Muebles y Llaves</fullName>
            </value>
            <value>
                <fullName>Entrega de Bienes Muebles y Llaves</fullName>
            </value>
            <value>
                <fullName>Recepción de Bienes INM y Llaves</fullName>
            </value>
            <value>
                <fullName>Entrega de Bienes INM y Llaves</fullName>
            </value>
            <value>
                <fullName>Devolución de expediente para integrarlo</fullName>
            </value>
            <value>
                <fullName>Devolución del asunto para castigo</fullName>
            </value>
            <value>
                <fullName>Devolución del asunto por grado prelación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>