unpackaged/main/default/objects/Asunto__c/fields/Etapa_Judicial_Actual_con_Nivel__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Judicial_Actual_con_Nivel__c</fullName>
    <formula>TEXT(Nivel_de_Etapa__c) + ' - ' + Etapa_Judicial_RO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Etapa Judicial Actual con Nivel</label>
    <type>Text</type>
</CustomField>