unpackaged/main/default/objects/Asunto__c/fields/Etapa_Judicial_Importe_Only__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Judicial_Importe_Only__c</fullName>
    <label>Etapa Judicial Importe Only</label>
    <length>255</length>
    <type>Text</type>
</CustomField>