unpackaged/main/default/objects/Asunto__c/fields/Etapa_Judicial_RO__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Judicial_RO__c</fullName>
    <label>Etapa Judicial Actual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>