unpackaged/main/default/objects/Asunto__c/fields/Expediente__c.field-meta.xml
<CustomField>
    <fullName>Expediente__c</fullName>
    <externalId>true</externalId>
    <label>EXP.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>