unpackaged/main/default/objects/Asunto__c/fields/FECHA_COMPLETA_DEL_CONTRATO__c.field-meta.xml
<CustomField>
    <fullName>FECHA_COMPLETA_DEL_CONTRATO__c</fullName>
    <description>Números y letras de días y años y nombre de los meses</description>
    <label>FECHA DEL CONTRATO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>