unpackaged/main/default/objects/Asunto__c/fields/FECHA_CONCLUYE_PRUEBAS__c.field-meta.xml
<CustomField>
    <fullName>FECHA_CONCLUYE_PRUEBAS__c</fullName>
    <label>FECHA CONCLUYE PRUEBAS</label>
    <type>Date</type>
</CustomField>