unpackaged/main/default/objects/Asunto__c/fields/Fecha_de_apelacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_apelacion__c</fullName>
    <label>Fecha de inicio de apelación</label>
    <type>Date</type>
</CustomField>