unpackaged/main/default/objects/Asunto__c/fields/Fecha_de_Asignacion_AE__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Asignacion_AE__c</fullName>
    <label>FECHA DE TRASPASO A EXTERNO</label>
    <type>Date</type>
</CustomField>