unpackaged/main/default/objects/Asunto__c/fields/Fecha_de_Cert_Contable__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Cert_Contable__c</fullName>
    <label>Fecha de Certificación Contable</label>
    <type>Date</type>
</CustomField>