unpackaged/main/default/objects/Asunto__c/fields/Fecha_de_Demanda__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Demanda__c</fullName>
    <label>FECHA ADMISION DE DEMANDA</label>
    <summarizedField>Etapa_Judicial__c.Fecha_de_Etapa_Judicial__c</summarizedField>
    <summaryFilterItems>
        <field>Etapa_Judicial__c.Etapa_Judicial__c</field>
        <operation>equals</operation>
        <value>Demanda</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Etapa_Judicial__c.Codigo_de_Resultado__c</field>
        <operation>equals</operation>
        <value>8A - Demanda Admitida</value>
    </summaryFilterItems>
    <summaryForeignKey>Etapa_Judicial__c.Asunto__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>