unpackaged/main/default/objects/Asunto__c/fields/Fecha_de_Ejecuci_n_de_Convenio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Ejecuci_n_de_Convenio__c</fullName>
    <label>Fecha de Prevención de Convenio</label>
    <summarizedField>Etapa_Judicial__c.Fecha_de_Etapa_Judicial__c</summarizedField>
    <summaryFilterItems>
        <field>Etapa_Judicial__c.Etapa_Judicial__c</field>
        <operation>equals</operation>
        <value>Ejecución de Convenio</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Etapa_Judicial__c.Codigo_de_Resultado__c</field>
        <operation>equals</operation>
        <value>4Z - Prevención Cumplimiento Convenio</value>
    </summaryFilterItems>
    <summaryForeignKey>Etapa_Judicial__c.Asunto__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>