unpackaged/main/default/objects/Asunto__c/fields/Fecha_de_Factura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Factura__c</fullName>
    <label>Fecha de Factura</label>
    <type>Date</type>
</CustomField>