unpackaged/main/default/objects/Asunto__c/fields/Fecha_de_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Ingreso__c</fullName>
    <label>Fecha de Ingreso</label>
    <required>true</required>
    <type>Date</type>
</CustomField>