unpackaged/main/default/objects/Asunto__c/fields/FECHA_DE_LA_PRIMERA_AMORTIZACION_A_CAPIT__c.field-meta.xml
<CustomField>
    <fullName>FECHA_DE_LA_PRIMERA_AMORTIZACION_A_CAPIT__c</fullName>
    <label>FECHA PRIMERA AMORTIZACION</label>
    <length>50</length>
    <type>Text</type>
</CustomField>