unpackaged/main/default/objects/Asunto__c/fields/Fecha_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Pago__c</fullName>
    <label>Fecha de Pago</label>
    <type>Date</type>
</CustomField>