unpackaged/main/default/objects/Asunto__c/fields/Fecha_de_Recuperacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Recuperacion__c</fullName>
    <label>FECHA DE RECUPERACION</label>
    <type>Date</type>
</CustomField>