unpackaged/main/default/objects/Asunto__c/fields/Fecha_de_Sentencia_1ra_Favorable__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Sentencia_1ra_Favorable__c</fullName>
    <label>FECHA DE SENTENCIA 1ra FAVORABLE</label>
    <summarizedField>Etapa_Judicial__c.Fecha_de_Etapa_Judicial__c</summarizedField>
    <summaryFilterItems>
        <field>Etapa_Judicial__c.Etapa_Judicial__c</field>
        <operation>equals</operation>
        <value>Solicitud se dicte sentencia definitiva</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Etapa_Judicial__c.Codigo_de_Resultado__c</field>
        <operation>equals</operation>
        <value>7K - Sentencia Definitiva a Favor</value>
    </summaryFilterItems>
    <summaryForeignKey>Etapa_Judicial__c.Asunto__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>