unpackaged/main/default/objects/Asunto__c/fields/FECHA_DE_SENTENCIA_EJECUTORIADA__c.field-meta.xml
<CustomField>
    <fullName>FECHA_DE_SENTENCIA_EJECUTORIADA__c</fullName>
    <label>FECHA DE SENTENCIA EJECUTORIADA</label>
    <summarizedField>Etapa_Judicial__c.Fecha_de_Etapa_Judicial__c</summarizedField>
    <summaryFilterItems>
        <field>Etapa_Judicial__c.Etapa_Judicial__c</field>
        <operation>equals</operation>
        <value>Ejecución de Sentencia</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Etapa_Judicial__c.Codigo_de_Resultado__c</field>
        <operation>equals</operation>
        <value>6O - Acuerdo y Not. de Sentencia Ejecutoria</value>
    </summaryFilterItems>
    <summaryForeignKey>Etapa_Judicial__c.Asunto__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>