unpackaged/main/default/objects/Asunto__c/fields/FECHA_DE_SUSCRPCION_DE_PAGARE__c.field-meta.xml
<CustomField>
    <fullName>FECHA_DE_SUSCRPCION_DE_PAGARE__c</fullName>
    <description>Define la fecha de inicio de reclamo de intereses</description>
    <label>FECHA FIRMA PAGARE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>