unpackaged/main/default/objects/Asunto__c/fields/Fecha_de_terminaci_n_amparo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_terminaci_n_amparo__c</fullName>
    <label>Fecha de terminación amparo</label>
    <type>Date</type>
</CustomField>