unpackaged/main/default/objects/Asunto__c/fields/Fecha_de_terminacion_apelacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_terminacion_apelacion__c</fullName>
    <label>Fecha terminación de apelación</label>
    <type>Date</type>
</CustomField>