unpackaged/main/default/objects/Asunto__c/fields/Fecha_del_Ultima_Etapa__c.field-meta.xml
<CustomField>
    <fullName>Fecha_del_Ultima_Etapa__c</fullName>
    <label>Fecha del Ultima Etapa</label>
    <summarizedField>Etapa_Judicial__c.Fecha_de_Etapa_Judicial__c</summarizedField>
    <summaryForeignKey>Etapa_Judicial__c.Asunto__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>