unpackaged/main/default/objects/Asunto__c/fields/Fecha_Deudor_y_Localizado_en_Emplazamien__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Deudor_y_Localizado_en_Emplazamien__c</fullName>
    <label>Fecha Deudor y Localizado en Empl.</label>
    <type>Date</type>
</CustomField>