unpackaged/main/default/objects/Asunto__c/fields/FECHA_ELABORA_DEMANDA__c.field-meta.xml
<CustomField>
    <fullName>FECHA_ELABORA_DEMANDA__c</fullName>
    <description>Fecha en que se hace la Demanda, hoy, Today, para cuando se haga la carga o importación masiva</description>
    <label>FECHA ELABORA DEMANDA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>