unpackaged/main/default/objects/Asunto__c/fields/Fecha_Etapa_Administrativa_Entrada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Etapa_Administrativa_Entrada__c</fullName>
    <label>Fecha Etapa Administrativa Entrada</label>
    <type>Date</type>
</CustomField>