unpackaged/main/default/objects/Asunto__c/fields/Fecha_Etapa_Administrativa_Salida__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Etapa_Administrativa_Salida__c</fullName>
    <label>Fecha Etapa Administrativa Salida</label>
    <type>Date</type>
</CustomField>