unpackaged/main/default/objects/Asunto__c/fields/Fecha_Incidente_Terceria__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Incidente_Terceria__c</fullName>
    <label>Fecha Incidente / Terceria</label>
    <type>Date</type>
</CustomField>