unpackaged/main/default/objects/Asunto__c/fields/Fecha_Notificaci_n_y_Emplazamiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Notificaci_n_y_Emplazamiento__c</fullName>
    <label>Fecha Notificación y Emplazamiento</label>
    <type>Date</type>
</CustomField>