unpackaged/main/default/objects/Asunto__c/fields/FECHA_PRESENTA_DEMANDA__c.field-meta.xml
<CustomField>
    <fullName>FECHA_PRESENTA_DEMANDA__c</fullName>
    <label>FECHA PRESENTA DEMANDA</label>
    <type>Date</type>
</CustomField>