unpackaged/main/default/objects/Asunto__c/fields/Fecha_Reasignacion_para_Ejecucion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Reasignacion_para_Ejecucion__c</fullName>
    <label>Fecha Reasignacion para Ejecucion</label>
    <summarizedField>Etapa_Judicial__c.Fecha_de_Etapa_Judicial__c</summarizedField>
    <summaryFilterItems>
        <field>Etapa_Judicial__c.Etapa_Judicial__c</field>
        <operation>equals</operation>
        <value>Ejecución de Convenio</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Etapa_Judicial__c.Codigo_de_Resultado__c</field>
        <operation>equals</operation>
        <value>1Z - Fecha Reasignación para Eecución</value>
    </summaryFilterItems>
    <summaryForeignKey>Etapa_Judicial__c.Asunto__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>